--- a/front/site/quiz/nordica.html
+++ b/front/site/quiz/nordica.html
@@ -58,19 +58,14 @@
                 <p class="dificuldade">Nível Fácil</p>
             </div>
             <div class="alternativas">
-                <label class="marginRadio">
-                    <input type="radio" name="questao1" id="" value="errado"> A - Odin
-                </label>
-                <label>
-                    <input type="radio" name="questao1" id="" value="errado"> B - Loki
-                </label>
-                <label>
-                    <input type="radio" name="questao1" id="" value="certo"> C - Thor
-                </label>
-                <label>
-                    <input type="radio" name="questao1" id="" value="errado"> D - Freyja
-                </label>
-
+                <input type="radio" name="questao1" id="" value="errado">
+                <label>A - Odin</label>
+                <input type="radio" name="questao1" id="" value="errado">
+                <label> B - Loki</label>
+                <input type="radio" name="questao1" id="" value="certo">
+                <label> C - Thor</label>
+                <input type="radio" name="questao1" id="" value="errado"> D - Freyja
+                <label>D - Freyja</label>
                 <div class="buttonResponder">
                     <input type="button" value="Responder" id="btnPergunta1">
                 </div>
@@ -111,21 +106,18 @@
                 <p class="dificuldade">Nível Fácil</p>
             </div>
             <div class="alternativas">
-                <label class="marginRadio">
-                    <input type="radio" name="questao2" class="tamanhoInputOriginal" value="errado"> A - Fenrir
-                </label>
-                <label>
-                    <input type="radio" name="questao2" class="tamanhoInputOriginal" value="errado"> B - Sleipnir
-                </label>
-                <label>
-                    <input type="radio" name="questao2" class="tamanhoInputOriginal" value="errado"> C - Jormungandr
-                </label>
-                <label>
-                    <input type="radio" name="questao2" class="tamanhoInputOriginal" value="certo"> D - Skoll
-                </label>
-                <div class="buttonResponder">
-                    <input type="button" value="Responder" id="btnPergunta2">
-                </div>
+
+                <input type="radio" name="questao2" class="tamanhoInputOriginal" value="errado">
+                <labe> A - Fenrir</label>
+                    <input type="radio" name="questao2" class="tamanhoInputOriginal" value="errado">
+                    <label> B - Sleipnir</label>
+                    <input type="radio" name="questao2" class="tamanhoInputOriginal" value="errado">
+                    <label>C - Jormungandr</label>
+                    <input type="radio" name="questao2" class="tamanhoInputOriginal" value="certo">
+                    <label>D - Skoll</label>
+                    <div class="buttonResponder">
+                        <input type="button" value="Responder" id="btnPergunta2">
+                    </div>
             </div>
         </section>
         <section id="secao-pergunta-3" class="secao-pergunta">
@@ -135,18 +127,16 @@
                 <p class="dificuldade">Nível fácil</p>
             </div>
             <div class="alternativas">
-                <label class="marginRadio">
-                    <input type="radio" name="questao3" class="tamanhoInputOriginal" value="errado"> A - Valhalla
-                </label>
-                <label for="">
-                    <input type="radio" name="questao3" class="tamanhoInputOriginal" value="errado"> B - Helheim
-                </label>
-                <label for="">
-                    <input type="radio" name="questao3" class="tamanhoInputOriginal" value="errado"> C - Midgard
-                </label>
-                <label for="">
-                    <input type="radio" name="questao3" class="tamanhoInputOriginal" value="certo"> D - Asgard
-                </label>
+
+                <input type="radio" name="questao3" class="tamanhoInputOriginal" value="errado">
+                <label>A - Valhalla</label>
+                <input type="radio" name="questao3" class="tamanhoInputOriginal" value="errado">
+                <label>B - Helheim</label>
+                <input type="radio" name="questao3" class="tamanhoInputOriginal" value="errado">
+                <label>C - Midgard</label>
+                <input type="radio" name="questao3" class="tamanhoInputOriginal" value="certo"> D - Asgard
+                <label>D - Asgard</label>
+
                 <div class="buttonResponder">
                     <input type="button" value="Responder" id="btnPergunta3">
                 </div>
@@ -160,22 +150,19 @@
                 <p class="dificuldade">Nível médio</p>
             </div>
             <div class="alternativas">
-                <label class="marginRadio">
-                    <input type="radio" name="questao4" class="tamanhoInputOriginal" value="certo"> A - Odin (sabedoria), Thor (força), Freyja
-                    (amor)
-                </label>
-                <label>
-                    <input type="radio" name="questao4" class="tamanhoInputOriginal" value="errado"> B - Loki (trapaça), Balder (beleza), Freyr
-                    (fertilidade)
-                </label>
-                <label>
-                    <input type="radio" name="questao4" class="tamanhoInputOriginal" value="errado"> C - Freyja (amor), Tyr (coragem), Heimdall
-                    (vigilância)
-                </label>
-                <label>
-                    <input type="radio" name="questao4" class="tamanhoInputOriginal" value="errado"> D - Odin (sabedoria), Freyja (amor), Thor
-                    (trovão)
-                </label>
+
+                <input type="radio" name="questao4" class="tamanhoInputOriginal" value="certo">
+                <label>A - Odin (sabedoria), Thor (força), Freyja(amor)</label>
+
+                <input type="radio" name="questao4" class="tamanhoInputOriginal" value="errado"><label>B - Loki
+                (trapaça), Balder(beleza), Freyr(fertilidade)</label>
+
+                <input type="radio" name="questao4" class="tamanhoInputOriginal" value="errado"> 
+                <label>C - Freyja (amor), Tyr(coragem), Heimdall(vigilância)</label>
+
+                <input type="radio" name="questao4" class="tamanhoInputOriginal" value="errado"> 
+                <label>D - Odin(sabedoria), Freyja(amor), Thor(trovão)</label>
+                
 
                 <div class="buttonResponder">
                     <input type="button" value="Responder" id="btnPergunta4">
@@ -190,21 +177,18 @@
                 <p class="dificuldade">Nível médio</p>
             </div>
             <div class="alternativas">
-                <label class="marginRadio">
-                    <input type="radio" name="questao5" class="tamanhoInputOriginal" value="errado"> A - Uma espada mágica; representa o poder
-                    dos deuses.
-                </label>
-                <label>
-                    <input type="radio" name="questao5" class="tamanhoInputOriginal" value="certo"> B - Uma árvore cósmica que conecta os Nove
-                    Mundos; simboliza a ordem do universo
-                </label>
-                <label>
-                    <input type="radio" name="questao5" class="tamanhoInputOriginal" value="errado"> C - Uma serpente gigante que envolve o
-                    mundo; representa a destruição iminente
-                </label>
-                <label>
-                    <input type="radio" name="questao5" class="tamanhoInputOriginal" value="errado"> D - Um pássaro mágico
-                </label>
+
+                <input type="radio" name="questao5" class="tamanhoInputOriginal" value="errado">
+                <label> A - Uma espada mágica: Representa o poder dos deuses</label>
+
+                <input type="radio" name="questao5" class="tamanhoInputOriginal" value="certo">
+                <label>B - Uma árvore cósmica que conecta os Nove Mundos; simboliza a ordem do universo</label>
+
+                <input type="radio" name="questao5" class="tamanhoInputOriginal" value="errado">
+                <label> C - Uma serpente gigante que envolve o mundo; representa a destruição iminente</label>
+
+                <input type="radio" name="questao5" class="tamanhoInputOriginal" value="errado">
+                <label>D - Um pássaro mágico</label>
                 <div class="buttonResponder">
                     <input type="button" value="Responder" id="btnPergunta5">
                 </div>
@@ -217,21 +201,22 @@
                 <p class="dificuldade">Nível médio</p>
             </div>
             <div class="alternativas">
-                <label class="marginRadio">
-                    <input type="radio" name="questao6" class="tamanhoInputOriginal" value="errado"> A - Mjölnir foi forjado por Loki e usado
-                    para criar trovões e relâmpagos.
-                </label>
-                <label>
-                    <input type="radio" name="questao6" class="tamanhoInputOriginal" value="errado"> B - Mjölnir foi roubado por um gigante e
-                    Thor teve que buscá-lo em uma jornada épica.
-                </label>
-                <label>
-                    <input type="radio" name="questao6" class="tamanhoInputOriginal" value="certo"> C - Mjölnir foi presenteado a Thor por Odin
-                    e é capaz de derrotar os inimigos dos deuses.
-                </label>
-                <label>
-                    <input type="radio" name="questao6" class="tamanhoInputOriginal" value="errado"> D -Mjölnir é uma arma lendária, mas não
-                    desempenha um papel importante na mitologia nórdica.
+
+                <input type="radio" name="questao6" class="tamanhoInputOriginal" value="errado"> A - Mjölnir foi forjado
+                por Loki e usado
+                para criar trovões e relâmpagos.
+
+                <input type="radio" name="questao6" class="tamanhoInputOriginal" value="errado"> B - Mjölnir foi roubado
+                por um gigante e
+                Thor teve que buscá-lo em uma jornada épica.
+
+                <input type="radio" name="questao6" class="tamanhoInputOriginal" value="certo"> C - Mjölnir foi
+                presenteado a Thor por Odin
+                e é capaz de derrotar os inimigos dos deuses.
+
+                <input type="radio" name="questao6" class="tamanhoInputOriginal" value="errado"> D -Mjölnir é uma arma
+                lendária, mas não
+                desempenha um papel importante na mitologia nórdica.
                 </label>
 
                 <div class="buttonResponder">
@@ -247,21 +232,22 @@
                 <p class="dificuldade">Nível difícil</p>
             </div>
             <div class="alternativas">
-                <label class="marginRadio">
-                    <input type="radio" name="questao7" class="tamanhoInputOriginal" value="errado"> A - Uma grande festa dos deuses antes do
-                    fim do mundo.
-                </label>
-                <label>
-                    <input type="radio" name="questao7" class="tamanhoInputOriginal" value="errado"> B - Uma jornada de Thor para resgatar seu
-                    martelo Mjölnir do submundo.
-                </label>
-                <label>
-                    <input type="radio" name="questao7" class="tamanhoInputOriginal" value="certo"> C - Uma batalha final entre os deuses e as
-                    forças do caos, resultando na destruição do mundo.
-                </label>
-                <label>
-                    <input type="radio" name="questao7" class="tamanhoInputOriginal" value="errado"> D - D A ascensão de um novo deus supremo
-                    para governar os Nove Mundos.
+
+                <input type="radio" name="questao7" class="tamanhoInputOriginal" value="errado"> A - Uma grande festa
+                dos deuses antes do
+                fim do mundo.
+
+                <input type="radio" name="questao7" class="tamanhoInputOriginal" value="errado"> B - Uma jornada de Thor
+                para resgatar seu
+                martelo Mjölnir do submundo.
+
+                <input type="radio" name="questao7" class="tamanhoInputOriginal" value="certo"> C - Uma batalha final
+                entre os deuses e as
+                forças do caos, resultando na destruição do mundo.
+
+                <input type="radio" name="questao7" class="tamanhoInputOriginal" value="errado"> D - D A ascensão de um
+                novo deus supremo
+                para governar os Nove Mundos.
                 </label>
 
                 <div class="buttonResponder">
@@ -276,21 +262,22 @@
                 <p class="dificuldade">Nível difícil</p>
             </div>
             <div class="alternativas">
-                <label class="marginRadio">
-                    <input type="radio" name="questao8" class="tamanhoInputOriginal" value="errado"> A - Baldur era um deus da guerra que
-                    morreu em batalha, enfraquecendo os deuses.
-                </label>
-                <label>
-                    <input type="radio" name="questao8" class="tamanhoInputOriginal" value="errado"> B - Baldur era um deus da beleza que se
-                    apaixonou por uma mortal e morreu de tristeza.
-                </label>
-                <label>
-                    <input type="radio" name="questao8" class="tamanhoInputOriginal" value="certo"> C - Baldur era imortal, e sua morte foi uma
-                    surpresa para os deuses, que ficaram abalados.
-                </label>
-                <label>
-                    <input type="radio" name="questao8" class="tamanhoInputOriginal" value="errado"> D - Baldur era um deus amado cuja morte
-                    levou a uma série de eventos que levaram ao Ragnarök.
+
+                <input type="radio" name="questao8" class="tamanhoInputOriginal" value="errado"> A - Baldur era um deus
+                da guerra que
+                morreu em batalha, enfraquecendo os deuses.
+
+                <input type="radio" name="questao8" class="tamanhoInputOriginal" value="errado"> B - Baldur era um deus
+                da beleza que se
+                apaixonou por uma mortal e morreu de tristeza.
+
+                <input type="radio" name="questao8" class="tamanhoInputOriginal" value="certo"> C - Baldur era imortal,
+                e sua morte foi uma
+                surpresa para os deuses, que ficaram abalados.
+
+                <input type="radio" name="questao8" class="tamanhoInputOriginal" value="errado"> D - Baldur era um deus
+                amado cuja morte
+                levou a uma série de eventos que levaram ao Ragnarök.
                 </label>
                 <div class="buttonResponder">
                     <input type="button" value="Responder" id="btnPergunta8">
@@ -306,21 +293,22 @@
                 <p class="dificuldade">Nível difícil</p>
             </div>
             <div class="alternativas">
-                <label class="marginRadio">
-                    <input type="radio" name="questao9" class="tamanhoInputOriginal" value="errado"> A - A Hela, a deusa da morte, que conduz
-                    as almas para o Valhalla.
-                </label>
-                <label>
-                    <input type="radio" name="questao9" class="tamanhoInputOriginal" value="errado"> B - Freyja, a deusa do amor, que traz
-                    felicidade aos guerreiros caídos.
-                </label>
-                <label>
-                    <input type="radio" name="questao9" class="tamanhoInputOriginal" value="certo"> C - Sigrdrífa, a valquíria que desperta o
-                    herói Sigurd e o ajuda em suas aventuras.
-                </label>
-                <label>
-                    <input type="radio" name="questao9" class="tamanhoInputOriginal" value="errado"> D - Brynhild, a valquíria que cai em
-                    desgraça e é aprisionada em uma torre de fogo.
+
+                <input type="radio" name="questao9" class="tamanhoInputOriginal" value="errado"> A - A Hela, a deusa da
+                morte, que conduz
+                as almas para o Valhalla.
+
+                <input type="radio" name="questao9" class="tamanhoInputOriginal" value="errado"> B - Freyja, a deusa do
+                amor, que traz
+                felicidade aos guerreiros caídos.
+
+                <input type="radio" name="questao9" class="tamanhoInputOriginal" value="certo"> C - Sigrdrífa, a
+                valquíria que desperta o
+                herói Sigurd e o ajuda em suas aventuras.
+
+                <input type="radio" name="questao9" class="tamanhoInputOriginal" value="errado"> D - Brynhild, a
+                valquíria que cai em
+                desgraça e é aprisionada em uma torre de fogo.
                 </label>
 
                 <div class="buttonResponder">
@@ -335,22 +323,23 @@
                 <p class="dificuldade">Nível difícil</p>
             </div>
             <div class="alternativas">
-                <label class="marginRadio">
-                    <input type="radio" name="questao10" class="tamanhoInputOriginal" value="errado"> A - Os vikings rejeitaram completamente a
-                    mitologia nórdica em favor de outras crenças
-                </label>
-                <label>
-                    <input type="radio" name="questao10" class="tamanhoInputOriginal" value="errado"> B - Os vikings abandonaram suas próprias
-                    crenças em favor do cristianismo e não foram influenciados pela mitologia.
-                </label>
-                <label>
-                    <input type="radio" name="questao10" class="tamanhoInputOriginal" value="certo"> C - A mitologia nórdica inspirou a arte, a
-                    poesia e as sagas vikings, refletindo valores e crenças culturais.
-                </label>
-                <label>
-                    <input type="radio" name="questao10" class="tamanhoInputOriginal" value="errado"> D - mitologia nórdica não teve impacto
-                    significativo na cultura viking; eles eram mais pragmáticos e guerreiros do que preocupados com a
-                    mitologia.
+
+                <input type="radio" name="questao10" class="tamanhoInputOriginal" value="errado"> A - Os vikings
+                rejeitaram completamente a
+                mitologia nórdica em favor de outras crenças
+
+                <input type="radio" name="questao10" class="tamanhoInputOriginal" value="errado"> B - Os vikings
+                abandonaram suas próprias
+                crenças em favor do cristianismo e não foram influenciados pela mitologia.
+
+                <input type="radio" name="questao10" class="tamanhoInputOriginal" value="certo"> C - A mitologia nórdica
+                inspirou a arte, a
+                poesia e as sagas vikings, refletindo valores e crenças culturais.
+
+                <input type="radio" name="questao10" class="tamanhoInputOriginal" value="errado"> D - mitologia nórdica
+                não teve impacto
+                significativo na cultura viking; eles eram mais pragmáticos e guerreiros do que preocupados com a
+                mitologia.
                 </label>
                 <div class="buttonResponder">
                     <input type="button" value="Responder" id="btnPergunta10">
