added content of irlandesa.html + japonesa.html.

--- a/front/site/paginas/irlandesa.html
+++ b/front/site/paginas/irlandesa.html
@@ -13,7 +13,7 @@
 
 <body>
   <header>
-    <h1>FENÍCIA</h1>
+    <h1>IRLANDESA</h1>
   </header>
   <div class="row">
     <div class="col" style="background-image: url(../paginas/imagens/img-aside.png);
@@ -22,71 +22,129 @@
       1 of 3
     </div>
     <div class="col-6">
-      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fuga, mollitia recusandae totam consectetur autem
-      laborum iste illum non, voluptatem esse magni aspernatur reiciendis est perspiciatis. Quis quisquam ea et
-      obcaecati?
-      Praesentium quam illo aliquid unde optio repellat mollitia inventore dolor dignissimos obcaecati, exercitationem
-      atque id reiciendis ipsa quae dolore omnis animi asperiores veritatis cumque veniam alias est molestias? Velit,
-      tenetur?
-      Obcaecati, totam. Accusantium atque dignissimos, quaerat distinctio dolor dolore, provident facilis magnam eius
-      eveniet reprehenderit incidunt a rerum sint minus itaque? Assumenda ipsam veniam iste dicta optio minus sit
-      provident?
-      Laudantium reprehenderit iste sunt architecto cupiditate atque quae rem ea dolore eum eos ipsum, porro deserunt
-      repudiandae quia odio eligendi vel excepturi obcaecati mollitia explicabo, qui quasi vitae aliquid! Placeat.
-      Quaerat velit fuga rem maxime aliquam esse illum natus sequi ut voluptate, perspiciatis distinctio aspernatur eos
-      dolorum facere deleniti debitis iure officia. Expedita asperiores incidunt, facere sapiente officia ab cum.
-      Ullam voluptatibus nulla nisi quo placeat cum reprehenderit illum quis ipsum, officiis et itaque quas voluptate
-      facere? Placeat, excepturi nisi ipsam soluta eum officia accusamus veritatis, totam doloribus consequuntur eos!
-      Quae quas qui perferendis asperiores ipsa, at enim deserunt nostrum voluptatum velit incidunt, nemo eligendi
-      perspiciatis deleniti nobis ullam! Maxime quam in accusantium beatae veritatis atque? Commodi eaque laborum omnis.
-      Quasi impedit hic temporibus perferendis assumenda at soluta sit error, illum suscipit pariatur praesentium
-      accusantium, inventore eveniet maxime mollitia est esse. Eum quis vel saepe aliquid deserunt, voluptas eos fuga.
-      Fugit labore quasi cum officia optio obcaecati dolorum neque, deleniti eligendi laboriosam minus iste qui unde
-      velit autem eveniet illo modi, nobis quos! Tenetur voluptatum iste aliquam alias aliquid adipisci?
-      Vero alias laudantium ex voluptas ducimus, culpa, doloremque quisquam odio voluptatibus fuga reiciendis, nisi quos
-      maxime ipsa asperiores eveniet totam eligendi ea nihil. Nobis incidunt perspiciatis at suscipit nam ratione.
-      Iusto laboriosam explicabo culpa, vitae sed cumque dignissimos at pariatur ad? Suscipit vero, voluptatibus dicta
-      sint a ipsa quisquam dolor natus alias delectus, assumenda architecto minima, nulla accusamus. Harum, architecto!
-      Obcaecati nulla maxime, eius minus omnis ut accusantium rerum culpa necessitatibus ea rem! Eveniet laboriosam,
-      doloribus veniam expedita tempore, nisi corrupti obcaecati amet sed cupiditate exercitationem, eaque quidem quam
-      dolores.
-      Officia, repellat cupiditate omnis quam sint ullam, fugit vitae perferendis quis necessitatibus corrupti adipisci
-      iusto placeat quas accusantium! Eum deserunt consectetur explicabo consequuntur illum, dicta pariatur optio sint
-      inventore vel?
-      Aperiam sapiente voluptates veritatis quam quasi autem rerum illum odio facere perferendis sint modi fugiat, a
-      cupiditate quae, itaque eaque accusamus obcaecati sit in sed dicta odit asperiores perspiciatis. Quibusdam.
-      Aperiam quibusdam inventore magni minima eos, officiis omnis quisquam enim incidunt maxime expedita! Sunt
-      cupiditate a odio labore perspiciatis libero minus vero deserunt doloribus commodi tempore et voluptate, velit
-      atque.
-      Labore vero totam reprehenderit officia voluptatem suscipit fugiat deserunt maxime corrupti. Excepturi, quidem
-      dolor. Placeat delectus esse facilis quia nihil assumenda perferendis, velit, quis, sapiente voluptatum maxime
-      ratione beatae veritatis.
-      Accusantium dolorum aliquam, enim a voluptas voluptatem. Maiores assumenda eos commodi eveniet, dolore rem harum.
-      Aspernatur cupiditate libero sapiente eius nesciunt consectetur fugiat, reiciendis necessitatibus nam quisquam,
-      rem debitis repellendus!
-      Iure totam quis dolore doloribus alias deserunt vero sequi quasi! Inventore, odit! Deleniti porro, laudantium
-      numquam aperiam cumque velit dolorum aliquid sed ducimus enim quos facere ipsam laborum, assumenda atque.
-      Architecto officiis porro excepturi quod nisi voluptates quaerat reprehenderit et blanditiis a consequatur aperiam
-      suscipit expedita numquam, autem accusantium placeat nam iusto repellat ducimus cupiditate non delectus quam.
-      Voluptate, corrupti!
-      Quaerat commodi deleniti reprehenderit nisi quis est aperiam labore, numquam ratione ullam porro corporis sint
-      architecto aspernatur sunt exercitationem amet illo error suscipit corrupti iure, autem, et tenetur quam. Ea.
-      Inventore cupiditate cum dignissimos fuga provident consequatur, reprehenderit rerum obcaecati ipsum laboriosam,
-      pariatur minus doloremque quae fugit quisquam quos illum labore ipsa! Quod temporibus maxime voluptates modi natus
-      quaerat molestiae.
-      Adipisci vero incidunt suscipit accusamus ab fugiat possimus odit atque magni vitae. Illum nesciunt autem quaerat
-      tempore doloribus at fugit vero, laborum in molestias voluptates omnis? Dicta molestiae nam fugit.
-      Sequi iusto saepe architecto id, unde rerum, aut facere, fugiat corporis commodi est. Molestiae doloremque odit ad
-      unde repudiandae, corrupti, aperiam rerum molestias eligendi commodi facere adipisci fugiat possimus rem.
-      Quasi praesentium quod expedita, unde adipisci nisi dolore similique quae animi qui asperiores, esse debitis
-      placeat nam odio veritatis nobis. Alias ipsum suscipit debitis repudiandae quae expedita recusandae deserunt
-      vitae!
-      Nostrum atque est ullam soluta, quae aliquid eum a itaque modi nisi distinctio provident, libero perferendis in?
-      Sequi unde, cumque vero, quis vel tempora accusantium repellendus nobis reiciendis fugiat magni!
+
+      <h1>Mitologia Irlandesa</h1>
+
+      <p>A mitologia irlandesa faz parte da mitologia celta, na qual também são incluídas crenças de outras regiões do
+        Reino Unido e da Europa. Em si a mitologia Irlandesa apresenta conjunto de crenças e histórias míticas dos
+        antigos habitantes da Irlanda, um povo céltico. Ela é rica e complexa, com uma variedade de deuses, heróis e
+        seres mágicos que desempenham papéis significativos na cosmologia e na cultura irlandesa.</p>
+
+      <h2>Ciclos da mitologia irlandesa</h2>
+
+      <p>A mitologia irlandesa pode ser dividida em quatro ciclos diferente, ou seja, quatro momentos históricos
+        distintos.</p>
+
+      <p>A princípio, ocorre o Ciclo Mitológico Irlandês, quando ocorre a origem desse povo e a história dos antigos
+        deuses. É o ciclo que tem as fontes menos preservadas, mas oferece registros importantes para compreender a
+        mitologia. Entre eles, por exemplo, o fato dos Tuatha Dé Danann não serem encarados ainda como deuses no
+        período.</p>
+
+      <p>O Ciclo de Uster ocorre no início da era cristão e tem esse nome pela província em que se passe. Nesse período,
+        a mitologia irlandesa conta com um grupo de histórias heroicas de personagens como Conchobar mac Nessa, rei do
+        Ulster, o grande herói Cúchulainn, filho de Lug, e de seus amigos, amantes e inimigos.</p>
+
+      <p>As histórias desse período refletem uma sociedade guerreira, como os irlandeses da época, ao mesmo tempo em que
+        se aproxima do Ciclo Mitológico. Isso porque personagens do ciclo anterior aparecem aqui. Os eventos do Ciclo
+        Feniano continuam a contar feitos de heróis irlandeses, assim como o anterior.</p>
+
+      <h2>Panteão Irlandês</h2>
+
+      <p><b>Aine of Knockaine:</b> Deusa do amor e da fertilidade, mais tarde foi conhecida como a rainha das fadas.
+        Deusa relacionada à lua, colheita, e a criação de gado.</p>
+
+      <p><b>Angus Og:</b> Deus da Juventude, do Amor e da Beleza na Irlanda Antiga. Um dos Tuatha de Dannan, Angus
+        possuía uma harpa dourada que produzia música de irresistível doçura. Os seus beijos transformavam-se em
+        pássaros que transportavam mensagens de amor.</p>
+
+      <p><b>Dagda:</b> "O Bom Deus", é uma das figuras mais proeminentes na mitologia irlandesa. Ele é associado à
+        fertilidade, abundância, magia e sabedoria. É frequentemente representado como um deus corpulento, vestindo um
+        manto e segurando um grande caldeirão que é um símbolo de abundância. Ele também possui um clava (um tipo de
+        maça ou bastão), que tem a capacidade de matar com um golpe e ressuscitar com o outro. Dagda desempenha um papel
+        vital na mitologia, liderando os Tuatha Dé Danann em várias batalhas e negociando acordos com outras divindades.
+      </p>
+
+      <p><b>Etain:</b> Na mitologia celta, Etain (A Brilhante) era a tripla deusa do sol, água, cavalos, fragrâncias,
+        beleza, música e transmigração das almas.</p>
+
+      <p><b>Fintan:</b> Na mitologia celta, o salmão da sabedoria, era um metamorfo. Foi o único irlandês a sobreviver
+        ao dilúvio mudando sua forma para um falcão para sobrevoar as águas e depois em salmão para nelas sobreviver.
+        Tendo comido nozes mágicas recebeu todo o conhecimento, mas ficou preso numa rede e foi comido por Finn MacCool
+        que acabou adquirindo seu conhecimento e seus poderes.</p>
+
+      <p><b>Morrigan:</b> é uma deusa guerreira associada à guerra, à morte e à profecia. Ela é frequentemente
+        representada como uma figura feminina poderosa, muitas vezes vista em forma de corvo. Morrigan é uma figura
+        ambígua, pois pode ser tanto uma protetora quanto uma fonte de destruição. Ela muitas vezes encoraja guerreiros
+        em batalha, mas também pode predizer a morte iminente.Além de seu papel na guerra, Morrigan também está ligada à
+        soberania e à terra, sendo vista como uma guardiã da terra e dos seus habitantes.
+      </p>
+
+      <p><b>Lugh:</b> é um dos deuses mais importantes da mitologia irlandesa, sendo associado ao sol, à luz, às
+        habilidades e à cura. Ele é frequentemente representado como um jovem guerreiro, habilidoso em várias artes e
+        ofícios. Lugh é conhecido por suas habilidades sobrenaturais, e é muitas vezes descrito como um mestre em várias
+        disciplinas, incluindo música, poesia e artes marciais. Ele desempenha um papel fundamental na batalha de Mag
+        Tuired, liderando os Tuatha Dé Danann à vitória contra os Fomorianos.</p>
+
+      <p><b>Brigid:</b> é uma deusa associada ao fogo, à poesia, à cura e à fertilidade. Ela é muitas vezes vista como
+        uma deusa tripla, representando três aspectos: Brigid do fogo (associada à criatividade e inspiração), Brigid da
+        forja (associada ao trabalho e artesanato) e Brigid da cura (associada à saúde e bem-estar). Brigid é uma figura
+        altamente reverenciada na tradição irlandesa, e o festival de Imbolc, celebrado em 1º de fevereiro, é dedicado a
+        ela.</p>
+
+      <p><b>Cernunnos:</b> é uma figura que aparece na mitologia celta, incluindo a irlandesa, embora seu culto não seja
+        tão proeminente quanto o de outros deuses. Ele é frequentemente representado como um homem com chifres de cervo,
+        símbolo da renovação, da fertilidade e da conexão com a natureza. Cernunnos está associado ao reino animal e à
+        vida selvagem, sendo considerado um guardião das florestas e animais.
+      </p>
+
+      <p><b>Scathach:</b> A Sombra, Aquela que combate o medo. Deusa do submundo, Scath era a deusa da escuridão,
+        aspecto destruidor da Senhora. Mulher guerreira e profetisa que viveu em Albion, na Escócia, e que ensinava
+        artes marciais para os guerreiros que tinham coragem suficiente para treinar com ela, pois era tida como dura e
+        impiedosa. Não foi à toa que o adestramento do herói Cuchulainn foi levado a cabo por ela mesma, considerada a
+        maior guerreira de toda a Irlanda. Scath era ainda a patrona dos ferreiros, das curas, magia, profecia e artes
+        marciais.</p>
+
+      <h2>Elementos Folclóricos</h2>
+
+      <h3>Fairies</h3>
+
+      <p>As fadas irlandesas não são bem o que você está imaginando. Esses seres folclóricos não são nada como os que
+        Hollywood retrata, mas sim entidades poderosas. As fadas são um povo secreto, que vivem em reinos governados por
+        seus reis e rainhas. Os irlandeses acreditam que elas são responsáveis pelas mais diversas situações que
+        acontecem no reino humano. Se uma criança encontra uma fada e a trata bem, pode ter um desejo concedido. </p>
+
+      <h3>The Pooka</h3>
+      <p>É um dos muitos seres metamorfos que habitam a Irlanda. Temido por muitos, a lenda conta a história de um ser
+        em forma de cão preto, com olhos grandes e sedentos por sangue, que pode se transformar em um Goblin (espécie de
+        duende) ou até mesmo em um humano, mas mantendo traços caninos.</p>
+
+      <h3>Mermaids</h3>
+      <p>As mermaids (sereias), habitantes das águas dos oceanos que banham a Irlanda, não são as belas sereias dos
+        filmes e contos sul-europeus, muito pelo contrário. Com rosto de porco e dentes afiados, vivem nas águas geladas
+        dos oceanos, atraindo marinheiros para as profundezas para matá-los. Elas também podem ser vistas em terra
+        firme, fazendo visitas aos homens, com quem se relacionam antes de fugir de volta ao mar.</p>
+
+      <h3>The Leprechauns</h3>
+      <p>São o símbolo da Irlanda. A lenda conta que antes mesmo de os seres humanos habitarem o país, eles já se
+        espalhavam pelas florestas e montanhas, com seus chapéus singulares e cabelo vermelho cor de fogo, protegendo
+        potes de ouro no fim do arco-íris. Diz-se que possuem uma habilidade lendária para encontrar e esconder
+        tesouros,especialmente potes de ouro, e são conhecidos por sua travessura e astúcia. Se um humano os captura, o
+        pequeno homem deve conceder três pedidos ao seu captor para ser libertado.</p>
+
+      <h3>Banshee</h3>
+      <p>Apenas um grito desse ser e a morte chega. Lendas contam que as banshees são um tipo de fada da morte, que traz
+        o fim com seus gritos estridentes. Servem também como alerta, uma vez que o grito é ouvido ao longe, o
+        falecimento de um ente querido é certo. Normalmente surgem com a aparência de uma mulher velha, vestida com
+        trapos, mas podem também se transformar na mais bela mulher e até mesmo em animais.</p>
+
+      <h3>The Dullahan</h3>
+      <p>Um cavaleiro sem cabeça, em seu cavalo preto e sua própria cabeça embaixo de um dos braços. Outro símbolo da morte, quando cavalga até uma vila, traz a certeza de tempos sombrios. Quem se atrever a olhar nos olhos do cavaleiro, será completamente cegado para sempre. Acredita-se que o Dullahan aparece após o pôr-do-sol, em festivais e banquetes.</p>
+
+
+
+
       <div class="botao">
-        <a href="../quiz/irlandesa.html"
-          ><input type="button" value="COMEÇAR" id="btnComecar"
-        /></a>
+        <a href="../quiz/irlandesa.html"><input type="button" value="COMEÇAR" id="btnComecar" /></a>
       </div>
     </div>
     <div class="col" style="background-image: url(../paginas/imagens/img-aside.png);
