todas paginas com textos

--- a/front/site/paginas/irlandesa.html
+++ b/front/site/paginas/irlandesa.html
@@ -23,7 +23,7 @@
     </div>
     <div class="col-6">
 
-      <h1>Mitologia Irlandesa</h1>
+      <h1 class="h1-texto">Mitologia Irlandesa</h1>
 
       <p>A mitologia irlandesa faz parte da mitologia celta, na qual também são incluídas crenças de outras regiões do
         Reino Unido e da Europa. Em si a mitologia Irlandesa apresenta conjunto de crenças e histórias míticas dos
