--- a/front/site/paginas/japonesa.html
+++ b/front/site/paginas/japonesa.html
@@ -20,7 +20,7 @@
       background-repeat: repeat;
       background-size: contain;"></div>
     <div class="col-6">
-      <h1>MITOLOGIA JAPONESA</h1>
+      <h1 class="h1-texto">MITOLOGIA JAPONESA</h1>
 
       <p>A Mitologia Japonesa é um tesouro de histórias fascinantes, é um sistema de crenças e histórias que se
         desenvolveu ao longo de milhares de anos no Japão. Ela é rica em deuses, espíritos, criaturas místicas e
