--- a/front/site/paginas/romana.html
+++ b/front/site/paginas/romana.html
@@ -28,89 +28,63 @@
         "
       ></div>
       <div class="col-6">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque
-        perspiciatis in consectetur modi nobis, corrupti sequi odit assumenda
-        unde ipsum ab sunt, possimus illum quod accusantium explicabo rerum eum
-        voluptatibus. Fuga et quasi quos blanditiis ipsum cumque voluptatum ad.
-        Temporibus commodi mollitia in consequuntur repudiandae, consectetur
-        aperiam quo vitae iusto reiciendis quisquam optio, aliquam minima. Amet
-        fugit tempore itaque quasi. Quam consequatur in illo laudantium
-        architecto eaque adipisci molestias quae nemo aliquam! Ullam, ex? Ipsum
-        consectetur neque ab quod incidunt accusamus quasi quibusdam totam
-        recusandae iusto rem nihil, ullam labore. Id, magni ut! Voluptatum eaque
-        laudantium cum, veniam odio id qui, rem soluta nihil laboriosam facilis
-        consequatur ipsa ipsum quibusdam, perferendis explicabo iste expedita
-        itaque deleniti sequi suscipit ullam obcaecati. Odio aspernatur quas
-        aliquid fugit, illo vero dolorem ab unde nostrum explicabo quisquam
-        magnam quibusdam, nesciunt inventore consequatur hic sunt porro sequi
-        fugiat, labore totam. Numquam sunt dicta incidunt sapiente. Officiis
-        doloribus illum non harum porro alias adipisci optio. Nobis ipsum fugit
-        accusantium velit molestiae sed sequi! Soluta nisi accusamus similique,
-        cum vitae obcaecati, assumenda, suscipit beatae quaerat magnam et!
-        Doloribus rem tempore cum quibusdam dolorum ratione, aliquam nihil
-        deserunt, voluptatibus porro minus nobis, harum nemo laborum. Sit
-        veniam, iure placeat libero temporibus neque, debitis quia officiis
-        praesentium, repellat nisi. Temporibus nemo quos nisi. Qui pariatur unde
-        laboriosam autem at cupiditate expedita deserunt eaque officia, sit
-        nulla vitae sed voluptatum repellat quasi. Ipsa, eum velit. Nemo totam
-        dolorum corporis ab? Dolore sunt cum cupiditate similique distinctio,
-        rerum labore quisquam, rem libero quaerat error, maxime facere? Dolorum
-        placeat totam minus reprehenderit voluptates vitae rerum consequatur et
-        illo velit. Amet, illo obcaecati. Incidunt dignissimos saepe aspernatur
-        minima asperiores dolor id iste, cum, totam numquam adipisci omnis sed
-        autem. Dolor inventore, excepturi sunt corporis ipsum perferendis
-        expedita quidem assumenda, voluptatibus, molestiae nobis dolore. Fugiat,
-        delectus aut possimus provident corporis, exercitationem voluptas esse
-        tempora doloribus enim suscipit. Praesentium distinctio blanditiis
-        soluta quo quae laboriosam pariatur numquam architecto modi. Optio,
-        provident animi? Velit, corrupti veritatis. Voluptatibus, debitis?
-        Deleniti ipsum expedita asperiores maiores eius illo praesentium
-        adipisci nam non nemo fugiat ad officiis aspernatur natus, tenetur
-        quaerat similique. Explicabo architecto, natus est in deleniti ullam?
-        Pariatur! Consectetur exercitationem atque porro magnam repellat
-        incidunt quod cupiditate reprehenderit temporibus. Deleniti nihil
-        voluptatibus molestiae, voluptas explicabo dignissimos itaque odio sint
-        nulla nemo fugiat vitae ducimus vero. Architecto, tenetur expedita? Vel
-        harum asperiores facere numquam illum? Sunt hic obcaecati corporis
-        architecto! Accusamus quae adipisci reiciendis aut ducimus officiis,
-        sint, rerum aperiam commodi, eaque voluptates voluptas inventore
-        pariatur aliquam tenetur repellat. Officiis esse debitis eaque assumenda
-        quisquam vel provident delectus praesentium et consectetur suscipit
-        aspernatur earum distinctio labore laborum nisi necessitatibus,
-        molestiae itaque nemo doloremque at id ad culpa? Soluta, labore? Minus,
-        quaerat qui rerum tempora alias ipsum cumque accusantium, debitis
-        doloremque enim sed ea dolorem dicta ducimus, facere commodi vel
-        veritatis reprehenderit sit rem sapiente provident animi! Voluptas,
-        illum quas. Provident sed asperiores modi, soluta quasi ad inventore
-        dolorem, voluptatum rerum totam pariatur porro impedit, similique
-        laboriosam error molestias id excepturi reiciendis nesciunt! Quo enim
-        animi, iusto dolorum illum quaerat! Quod quasi, nobis perferendis
-        obcaecati voluptates aliquid tenetur optio fugit cum, eius iste ducimus
-        laudantium officia ipsam quo reiciendis dolores consequuntur ipsa
-        facilis? Optio ex labore tempore placeat iure nam. Recusandae possimus,
-        cupiditate et ipsa similique, doloribus unde cumque, necessitatibus iste
-        nostrum laboriosam. Alias, placeat magni iure culpa dolor error debitis
-        veniam, architecto deleniti, maxime voluptatum quisquam eligendi aut
-        consequuntur. Fuga, earum nemo dolore, at labore consequatur, commodi
-        natus tempore obcaecati iure laboriosam dolorum incidunt. Nisi
-        laboriosam, cumque ex voluptatem sapiente aspernatur iste, aliquid error
-        repellendus at maiores non? Quisquam! Placeat quod odit doloremque id
-        tempora facere error ut voluptate? Veritatis voluptate consequatur iure
-        distinctio nobis explicabo ducimus, totam aliquam odio cupiditate id ad
-        similique. Fuga mollitia dolores officia quaerat! Blanditiis officiis
-        numquam nesciunt. Expedita quas, saepe possimus quidem facere debitis
-        nisi culpa, aliquid animi inventore facilis, dolorum recusandae
-        incidunt. Assumenda autem amet illo eveniet, dolores perferendis ad a
-        at! Magni reprehenderit laborum quaerat, ipsam beatae excepturi iusto!
-        Sed sunt, sapiente natus itaque ea delectus harum quaerat corporis cum
-        quo perferendis iusto necessitatibus consectetur! Sunt unde minima neque
-        accusantium expedita! Ullam repudiandae, fugit voluptates expedita sint
-        odit sed cupiditate quisquam minus cumque, incidunt ad consectetur, eius
-        minima eveniet suscipit. Rem saepe, atque voluptatem doloremque nemo hic
-        incidunt eaque maiores ducimus. Mollitia nemo aut perspiciatis? Odio,
-        aut. Beatae officia blanditiis, vero adipisci distinctio aperiam nisi
-        dolorum quis fuga inventore amet, autem maiores rem delectus tenetur
-        nemo consequuntur, provident deleniti reprehenderit ullam.
+        <h1 class="h1-texto">Mitologia Romana</h1>
+        <p>É o conjunto de crenças, estórias, mitos e lendas que foram contadas pelos romanos na antiguidade. Elas foram passadas oralmente de geração em geração.</p>
+        <p>As lendas que compunham a mitologia romana estavam baseadas em relatos sobre a origem de Roma, dos deuses, dos homens e dos fenômenos da natureza.</p>
+        <p>Lembre-se que antes da expansão do Cristianismo, na Roma Antiga a religião do povo era politeísta, ou seja, incluía diversos deuses.</p>
+        <p>Eles eram cultuados em rituais, festas, danças, invocações, procissões, orações e sacrifícios que ocorriam geralmente nos templos dedicados aos deuses.</p>
+        <p>Nessa época, a vida dos romanos estava intimamente relacionada com a religião e, portanto, com os deuses do panteão romano.</p>
+        <p>Eram eles que favoreciam as colheitas, a saúde, a proteção, a harmonia e a prosperidade entre os homens.</p>
+        <figure>
+          <figcaption></figcaption>
+        </figure>
+        <h3>Deuses:</h3>
+        <ul>
+          <li><strong>Júpiter:</strong> rei de todos os deuses, representante do dia, deus do céu.</li>
+          <li><strong>Apolo:</strong> deus do Sol, da luz, patrono da verdade e protetor das artes.</li>
+          <li><strong>Vênus:</strong> deusa romana do amor e da beleza.</li>
+          <li><strong>Marte:</strong> deus da guerra e protetor da agricultura.</li>
+          <li><strong>Minerva:</strong> divindade romana da sabedoria, do conhecimento, das artes e do comércio.</li>
+          <li><strong>Plutão:</strong> deus dos mortos, mundo subterrâneo e da riqueza.</li>
+          <li><strong>Netuno:</strong> deus dos mares, oceanos e também da água doce.</li>
+          <li><strong>Juno:</strong> deusa rainha dos deuses.</li>
+          <li><strong>Baco:</strong> deus do vinho e das festas.</li>
+          <li><strong>Febo:</strong> divindade romana que representava a luz do Sol, poesia, música, beleza masculina.</li>
+          <li><strong>Diana:</strong> deus da caça, castidade, animais selvagens, Lua e luz.</li>
+          <li><strong>Ceres:</strong> deusa da colheita, agricultura.</li>
+          <li><strong>Cupido:</strong> deus do amor.</li>
+          <li><strong>Mercúrio:</strong> mensageiro dos deuses, protetor dos comerciantes.</li>
+          <li><strong>Vulcano:</strong> divindade romana dos metais, metalurgia, fogo.</li>
+          <li><strong>Silvano:</strong> deus das florestas.</li>
+          <li><strong>Saturno:</strong> deus do tempo.</li>
+          <li><strong>Belona:</strong> deusa da guerra.</li>
+          <li><strong>Cibele:</strong> deusa da natureza, das montanhas, da terra fértil e das cavernas.</li>
+          <li><strong>Fortuna:</strong> deusa do acaso, da sorte e da esperança.</li>
+          <li><strong>Fama:</strong> deusa da poesia e mensageira de Júpiter.</li>
+        </ul>
+        <h3>Mitos:</h3>
+        <h4>Rômulo e remo:</h4>
+        <p>Segundo a mitologia romana, a história desses irmãos gêmeos fala das origens de Roma. Eles eram filhos de Marte e Rhea Silvia e, de acordo com Virgílio e muitos outros escritores, suas aventuras estavam inextricavelmente ligadas à fundação de Roma.</p>
+        <p>Nascido em Alba Longa, eles foram vistos como uma ameaça para o rei Amulius e, assim, para salvar a si mesmo, ele ordenou que fossem abandonados nas margens do rio Tibre. Os recém-nascidos foram deixados para morrer, mas Tibério, o pai mitológico do rio, salvou-os e eles sobreviveram sob seus cuidados. Um lobo fêmea amamentou-os em uma caverna perto de Lupercal. Mais tarde, eles foram adotados por um pastor, Faustulus. Inconscientes de sua identidade, eles cresceram trabalhando como fazendeiros e pastores. Mas não importava o quão longe eles tivessem vindo de seus pais originais de origem e de seu lar, suas raízes não os deixaram e suas habilidades de liderança inerentes os ajudaram a reunir muitos apoiadores.</p>
+        <p>À medida que se tornaram adultos, envolveram-se em uma discussão entre os partidários de Amulius e Numitor. Como conseqüência, Remus foi preso em Alba Longa, o mesmo lugar onde ele nasceu. O rei e o avô de Remus suspeitavam de sua verdadeira identidade. Enquanto isso, Romulus estava ocupado procurando maneiras de libertar seu irmão. Enquanto tudo isso acontecia, ambos ficaram sabendo de sua verdadeira identidade e uniram forças com seu avô para restaurar o trono. Finalmente, eles venceram e Amulius foi morto.</p>
+        <p>Quando eles voltaram para as sete colinas, eles foram envolvidos em uma discussão sobre onde construir a cidade. Romulus preferia o Monte Palatino, mas Remus queria que estivesse no Monte Aventino. Como não conseguiram chegar a um acordo, pediram aos deuses que ajudassem usando o augúrio ou a interpretação dos presságios. Romulus viu 12 aves auspiciosas e reivindicou uma vitória, já que Remus só viu seis. Isso deu origem a uma nova disputa e, eventualmente, Remus foi morto. Romulus então fundou a cidade de Roma.</p>
+        <h4>Júpiter e a abelha</h4>
+        <p>Lendas romanas sempre foram bem sucedidas em ensinar lições de vida. Um desses mitos de doçura e vingança é o mito de Júpiter e a abelha. A história mostra a moral de como a vingança pode ter consequências terríveis.</p>
+        <p>Um belo dia depois de ter sido irritado pelos mortais levando seu mel, a rainha da colméia decidiu visitar Júpiter. Depois de alcançar o Olimpo, ela ofereceu mel fresco para Júpiter. Encantada com o gosto, Júpiter prometeu cumprir um de seus desejos. Ela perguntou: “Dê-me, peço-te, uma picada, que se qualquer mortal se aproxima para levar o meu mel, eu posso matá-lo.” Desagradada por seu pedido por causa de seu amor pela raça humana ele concedeu seu desejo, mas no risco de sua própria vida. Ele disse: “Pois se você usar sua picada, ela permanecerá na ferida que você faz, e então você morrerá com a perda dela.”</p>
+        <p>A moral da história é estar contente com o que você tem. Desejar o bem para si mesmo a um custo para os outros sempre levou à queda. Ainda hoje, se uma abelha usar sua picada, resultará em sua própria morte.</p>
+        <h4>História de Enéias</h4>
+        <p>Enéias é o herói mitológico de Roma e Tróia. Homer menciona-o na como primo em primeiro grau do rei Príamo de Tróia. Na Eneida, Virgílio descreve-o como um herói e o ancestral de Romulus e Remus. A Eneida conta que Enéias era um dos poucos troianos que não foram mortos nem escravizados depois que Tróia foi derrotado. Depois de reunir um grupo e ser comandado pelos deuses para fugir, ele viajou para a Itália para se tornar o progenitor dos romanos. Essa equipe foi chamada de Aeneads. Ele levou consigo as estátuas de deuses troianos e as plantou na Itália. Eles vagaram por seis anos e finalmente se estabeleceram em Cartago. Aqui, Enéias e a rainha de Cartago, Dido, tiveram um caso de amor de um ano após o qual Dido propôs a ele para que eles pudessem reinar sobre os troianos e os cartagineses juntos. Afrodite (a versão romana de Vênus e a mãe de Enéias), com a ajuda de Júpiter, fez Enéias perceber seus verdadeiros motivos que o levaram a deixar o lugar secretamente. A dor de sua partida levou Dido a proferir uma maldição de inimizade sobre Roma. Depois, ela se apunhalou com a espada que havia dado a Aeneas durante o primeiro encontro deles.</p>
+        <p>Os Aeneads então retornaram à Sicília e Aeneas fez seu assentamento final no Lácio. Para homenagear seu pai, que morreu um ano antes, Aeneas organizou uma série de jogos fúnebres. Após a sua própria morte, ele desceu ao submundo e conheceu seu pai e Dido e aprendeu sobre o futuro de seus sucessores, em outras palavras, a história romana. Esta história sobre a ancestralidade dos romanos através dos troianos via Enéas e as terras que ele fundou é considerada com grande respeito pelos historiadores.</p>
+        <h3>Influência dos gregos</h3>
+        <p>A influência dos gregos na mitologia romana foi profunda e significativa, pois os romanos absorveram muitos elementos da cultura grega, incluindo sua mitologia, após o estabelecimento do Império Romano. Aqui estão algumas maneiras pelas quais os gregos influenciaram a mitologia romana:</p>
+        <ul>
+          <li><strong>Assimilação de Deuses:</strong> Os romanos identificaram muitos deuses e deusas gregos com suas próprias divindades, incorporando-os à sua própria religião. Por exemplo, Zeus se tornou Júpiter, Hera se tornou Juno, Atena se tornou Minerva, Afrodite se tornou Vênus, e assim por diante. No entanto, embora os nomes e algumas características fossem semelhantes, os romanos frequentemente interpretavam essas divindades de maneira diferente e atribuíam-lhes novos papéis na mitologia romana.</li>
+          <li><strong>Histórias Mitológicas:</strong> Muitas das histórias mitológicas gregas foram adaptadas e incorporadas à mitologia romana. Os mitos gregos sobre os heróis, como Hércules e Perseu, foram reinterpretados na mitologia romana com algumas variações. Por exemplo, o herói grego Héracles se tornou Hércules na mitologia romana.</li>
+          <li><strong>Mitologia e Literatura:</strong> Os escritores romanos, como Virgílio, Ovídio e Horácio, foram influenciados pela mitologia grega em suas obras literárias. Por exemplo, a "Eneida" de Virgílio, uma epopeia que conta a história de Eneias, é fortemente influenciada pelos épicos gregos, como a "Ilíada" e a "Odisseia" de Homero.</li>
+          <li><strong>Arte e Iconografia:</strong> A arte romana frequentemente incorporava elementos da mitologia grega em esculturas, pinturas e mosaicos. Os deuses e heróis gregos eram representados de várias formas nas obras de arte romanas.</li>
+          <li><strong>Sincretismo Religioso:</strong> Os romanos eram conhecidos por sua prática de sincretismo religioso, que envolvia a fusão de divindades de diferentes culturas e tradições religiosas. Isso levou a uma coexistência de deuses gregos e romanos em muitos aspectos da vida religiosa e cultural.</li>
+        </ul>
+        <p>É importante notar que, embora os romanos tenham adotado muitos elementos da mitologia grega, eles também desenvolveram sua própria tradição mitológica única ao longo do tempo. A mitologia romana tinha suas próprias histórias, divindades e características distintas, e essa síntese de influências gregas e romanas contribuiu para a rica tapeçaria mitológica da Roma Antiga.</p>
         <div class="botao">
           <a href="../quiz/romana.html"
             ><input type="button" value="COMEÇAR" id="btnComecar"
