--- a/front/site/paginas/grega.html
+++ b/front/site/paginas/grega.html
@@ -15,16 +15,14 @@
   <header>
     <a href="../paginas/index.html" id="logo"><img src="../../../back/imagens/LYJEK.png" alt="" class="logo" /></a>
     <h1>GREGA</h1>
-
-    <header>
       <nav>
           <ul class="lista-nav">
               <li id="link-home"><a href="../paginas/index.html">HOME</a></li>
               <li>
-                  <a href="#">QUIZ <span id="seta-baixo">&darr;</span></a>
+                  <a href="#">MITOLOGIAS <span id="seta-baixo">&darr;</span></a>
                   <ul class="dropdown">
                       <li id="margin-top-dropdown"><a href="egipcia.html">Egípcia</a></li>
-                      <li class="link-dropdown" id="linkFenicia"><a href="fenicia.html">Fenícia</a></li>
+                      <li class="link-dropdown" id="linkIrlandesa"><a href="irlandesa.html">Irlandesa</a></li>
                       <li class="link-dropdown" id="linkGrecoRomana"><a href="greco-romana.html">Greco-Romana</a></li>
                       <li class="link-dropdown"id="linkHindu"><a href="hindu.html">Hindu</a></li>
                       <li id="link-dropdown-excessao"><a href="mesopotamica.html">Mesopotâmica</a></li>
@@ -33,10 +31,9 @@
                       <li class="link-dropdown" id="linkGeral"><a href="geral.html">Geral</a></li>
                   </ul>
               </li>
-              <li id="link-grecia"><a href="../paginas/grega.html">MITOLOGIA GREGA</a></li>
+              <li id="link-grecia"><a href="../paginas/grega.html">QUIZ GREGA GREGA</a></li>
           </ul>
       </nav>
-  </header>
   </header>
   <div class="row">
     <div class="col" style="background-image: url(../paginas/imagens/img-aside.png);
