--- a/front/site/paginas/grega.html
+++ b/front/site/paginas/grega.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="../paginas/css/grega.css">
   <link rel="stylesheet" href="../paginas/css/style.css">
+  <script src="../quiz/js/animacoes.js" defer></script>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   <title>Grega | SEPE</title>
@@ -31,7 +32,7 @@
                       <li class="link-dropdown" id="linkGeral"><a href="geral.html">Geral</a></li>
                   </ul>
               </li>
-              <li id="link-grecia"><a href="../paginas/grega.html">QUIZ GREGA GREGA</a></li>
+              <li id="link-quiz"><a href="../paginas/grega.html">QUIZ GREGA</a></li>
           </ul>
       </nav>
   </header>
